Labatt POCM Deployment to UAT 09.16.2016/objects/POC_Spend_Category__c.object
<CustomObject>
    <description>This custom object is used for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Annual_POC_Budget_Plan__c</fullName>
        <label>Annual POC Budget Plan</label>
        <referenceTo>Annual_POC_Budget_Plan__c</referenceTo>
        <relationshipName>Spend_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Driver_Spend__c</fullName>
        <label>Driver Spend</label>
        <summarizedField>Driver_Item__c.Item_Spend__c</summarizedField>
        <summaryForeignKey>Driver_Item__c.POC_Spend_Category__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pre_Planning_Spend__c</fullName>
        <label>Pre-Planning Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Activation_Discretionary_Spend__c</fullName>
        <label>Trade Activation Discretionary Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Activation_Driver_Spend__c</fullName>
        <label>Trade Activation Driver Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Activation_Spend__c</fullName>
        <formula>Trade_Activation_Discretionary_Spend__c +  Trade_Activation_Driver_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Activation Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Spend__c</fullName>
        <label>Variable Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>POC Spend Category</label>
    <nameField>
        <label>Spend Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Spend Categories</pluralLabel>
    <recordTypes>
        <fullName>Discretionary</fullName>
        <active>true</active>
        <label>Discretionary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Driver</fullName>
        <active>true</active>
        <label>Driver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_Activation</fullName>
        <active>true</active>
        <label>Trade Activation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>